# ffmpeg-player

./: .gitignore  CMakeLists.txt  README.MD  main  main.cpp  player
